--- a/.github/workflows/youtube-cards.yml
+++ b/.github/workflows/youtube-cards.yml
@@ -16,7 +16,7 @@ jobs:
       contents: write
     # Run the GitHub Readme YouTube Cards action
     steps:
-      - uses: KSOH/.github@main
+      - uses: KSOSH/.github@main
         id: youtube-cards
         with:
           channel_id: ${{ secrets.YOUTUBE_CHANEL }}
